Cleaned up layout of planting details page.  Added maintenance "show" page. And fixed back links to go to referring page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,3 +96,9 @@ $state-danger-text: $danger-text-color;
 label.required:after {
     content:" *";
 }
+
+hr.section-separator {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-color: #C8D7FF;
+}
