--- a/app/views/plantings/index.html.slim
+++ b/app/views/plantings/index.html.slim
@@ -39,7 +39,7 @@ div class="container-fluid"
                 td = planting.tree_species.common_name unless planting.tree_species.nil?
                 td = planting.stakes_removed
                 td
-                  = link_to 'Show', planting
+                  = link_to 'Details', planting
                   | &nbsp;|&nbsp;
                   = link_to 'Edit', edit_planting_path(planting)
                   | &nbsp;|&nbsp;
