Add more fields for adoption requests from the pending adoptions spreadsheet.

--- a/app/views/adoption_requests/_form.html.slim
+++ b/app/views/adoption_requests/_form.html.slim
@@ -7,12 +7,25 @@ div class="row"
           ul
             - @adoption_request.errors.full_messages.each do |message|
               li = message
-      = f.text_field :owner_first_name
-      = f.text_field :owner_last_name
-      = f.email_field :owner_email
-      = f.phone_field :owner_phone
+      = f.date_field :received_on
       = f.text_field :street_address
       = f.text_field :city
       = f.text_field :state
       = f.text_field :zip_code
+      = f.text_field :owner_first_name
+      = f.text_field :owner_last_name
+      = f.email_field :owner_email
+      = f.phone_field :owner_phone
+      = f.check_box :concrete_removal
+      = f.check_box :wires
+      = f.check_box :spanish_speaker
+      = f.text_field :source
+      = f.date_field :contacted_on
+      = f.date_field :form_sent_to_cor_on, { label: "Form sent to COR on" }
+      = f.date_field :site_assessed_on
+      = f.collection_select :tree_id, Tree.all.order( :common_name ), :id, :text_for_html_select_option, { label: "Tree Preference", prompt: true }
+      = f.text_field :number_of_trees
+      = f.text_field :plant_space_width
+      = f.check_box :room_for_tree
+      = f.text_area :note
       = f.submit
