--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,11 +6,10 @@ html
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   body
-    = render 'shared/page_header', controller: params[:controller] unless (params[:controller] == 'user_sessions')
-    - if flash.any?
-      div class="container"
-        div class="row"
-          div class="well" id="flash-msg"
-            - flash.each do |name, msg|
-              = content_tag :strong, msg, class: name
+    - if params[:controller] == 'user_sessions' || params[:controller] == 'password_resets'
+      = render 'shared/flash'
+      = render 'shared/no_session_header'
+    - else
+      = render 'shared/page_header', controller: params[:controller]
+      = render 'shared/flash'
     = yield
