--- a/app/views/adoption_requests/_form.html.slim
+++ b/app/views/adoption_requests/_form.html.slim
@@ -8,6 +8,8 @@ div class="row"
             - @adoption_request.errors.full_messages.each do |message|
               li = message
       = f.date_field :received_on
+      = f.text_field :house_number
+      = f.text_field :street_name
       = f.text_field :street_address
       = f.text_field :city
       = f.text_field :state
