--- a/app/views/reports/plantings.html.slim
+++ b/app/views/reports/plantings.html.slim
@@ -11,7 +11,9 @@ div class="container-fluid"
         = f.date_field :planted_on_to
         = f.text_field :owner_first_name
         = f.text_field :owner_last_name
-        = f.text_field :street_address
+        = f.text_field :house_number_gt, label: "House number >"
+        = f.text_field :house_number_lt, label: "House number <"
+        = f.text_field :street_name
         = f.text_field :zip_code
         = f.collection_select :tree_id, Tree.all.order( :common_name ), :id, :text_for_html_select_option, { prompt: false }, { multiple: true }
         = f.date_field :last_maintenance_from
