--- a/app/views/reports/plantings_results.html.slim
+++ b/app/views/reports/plantings_results.html.slim
@@ -16,7 +16,8 @@ div class="container-fluid"
             tr
               th ID
               th Planted On
-              th Street Address
+              th House Number
+              th Street Name
               th Placement
               th Tree
               th Last Maintenance Date
@@ -31,12 +32,13 @@ div class="container-fluid"
               tr
                 td = planting.id
                 td = planting.planted_on
-                td = planting.parent_adoption_request.street_address
+                td = planting.parent_adoption_request.house_number
+                td = planting.parent_adoption_request.street_name
                 td = planting.placement
                 td = planting.tree_species.common_name
                 td = planting.last_maintenance_date
                 td = planting.last_status_code
-                td = planting.notes.last.note
+                td = planting.notes.last.note unless planting.notes.last.nil?
                 td = planting.stakes_removed
                 td = link_to 'Details', planting
   
