--- a/app/views/reports/plantings_results.html.slim
+++ b/app/views/reports/plantings_results.html.slim
@@ -40,5 +40,9 @@ div class="container-fluid"
                 td = planting.last_status_code
                 td = planting.notes.last.note unless planting.notes.last.nil?
                 td = planting.stakes_removed
-                td = link_to 'Details', planting
+                td
+                  ul
+                    li = link_to 'Details', planting
+                    li = link_to 'Add Maintenance Record', new_maintenance_record_path( :planting_id => planting.id ), target: "_blank"
+                    li = link_to 'Add Note', new_note_path( :planting_id => planting.id ), target: "_blank"
   
