--- a/app/views/reports/plantings_results.html.slim
+++ b/app/views/reports/plantings_results.html.slim
@@ -37,7 +37,8 @@ div class="container-fluid"
                 td = planting.tree_species.common_name
                 td = planting.last_maintenance_date
                 td = planting.last_status_code
-                td = planting.notes.last.note unless planting.notes.last.nil?
+                td 
+                  = render partial: "shared/note_content", locals: { planting: planting}
                 td
                   ul
                     li = link_to 'Details', planting
