--- a/app/views/adoption_requests/show.html.slim
+++ b/app/views/adoption_requests/show.html.slim
@@ -1,8 +1,20 @@
 div class="container-fluid"
   div class="row"
-    div class="col-xs-8 col-md-10" 
+    div class="col-xs-8 col-md-9" 
       h2 class="header-inline" 
         | Adoption Request Details
+      medium
+        | ( 
+        = link_to "Back", :back  
+        |  )
+    div class="col-xs-4 col-md-3"
+      div class="text-right"
+        medium
+          | ( 
+          = link_to 'Edit', edit_adoption_request_path(@adoption_request)
+          | &nbsp;|&nbsp;
+          = link_to 'Delete', @adoption_request, data: {:confirm => 'Deleting this record will delete all associated plantings.  Proceed to delete?'}, :method => :delete
+          |  )
   br
   div class="row edit-row"
     div class="col-xs-4 col-md-2 text-right" 
@@ -99,8 +111,3 @@ div class="container-fluid"
       strong Note
     div class="col-xs-8 col-md-4" 
       = @adoption_request.note
-  div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right"      
-      = link_to 'Edit', edit_adoption_request_path(@adoption_request)
-      | &nbsp;|&nbsp;
-      = link_to 'Back', adoption_requests_path
