Add completed field to adoption requests and the ability to filter adoption requests listing by this field.

--- a/app/views/adoption_requests/_form.html.slim
+++ b/app/views/adoption_requests/_form.html.slim
@@ -29,4 +29,5 @@ div class="row"
       = f.text_field :plant_space_width
       = f.check_box :room_for_tree
       = f.text_area :note
+      = f.check_box :completed
       = f.submit
