--- a/app/views/adoption_requests/index.html.slim
+++ b/app/views/adoption_requests/index.html.slim
@@ -15,6 +15,10 @@ div class="container-fluid"
   br
   div class="row"
     div class="col-xs-12"
+      = bootstrap_form_tag url: adoption_requests_path, method: 'get' do |f|
+        = f.check_box :include_completed, name: 'adoption_request[include_completed]', checked: @include_completed_checked
+  div class="row"
+    div class="col-xs-12"
       div class="table-responsive"
         table class="table table-hover"
           thead
