Add zone field to adoption requests.

--- a/app/views/adoption_requests/index.html.slim
+++ b/app/views/adoption_requests/index.html.slim
@@ -27,6 +27,7 @@ div class="container-fluid"
               th Received On
               th House Number
               th Street Name
+              th Zone
               th Owner
               th Phone
               th Email
@@ -43,6 +44,7 @@ div class="container-fluid"
                 td = adoption_request.received_on
                 td = adoption_request.house_number
                 td = adoption_request.street_name
+                td = adoption_request.zone
                 td = adoption_request.owner_full_name
                 td = adoption_request.owner_phone
                 td = adoption_request.owner_email
