--- a/app/views/adoption_requests/_form.html.slim
+++ b/app/views/adoption_requests/_form.html.slim
@@ -13,6 +13,7 @@ div class="row"
       = f.text_field :city
       = f.text_field :state
       = f.text_field :zip_code
+      = f.text_field :zone
       = f.text_field :owner_first_name
       = f.text_field :owner_last_name
       = f.email_field :owner_email
