--- a/app/views/adoption_requests/new.html.slim
+++ b/app/views/adoption_requests/new.html.slim
@@ -3,9 +3,6 @@ div class="container-fluid"
     div class="col-xs-12"
       h2 class="header-inline"
         | Add an Adoption Request
-      medium
-        | ( 
-        = link_to "Back", adoption_requests_path 
-        |  )
+      = render partial: 'shared/back_to_listing'
   br
   == render 'form'
