--- a/app/views/adoption_requests/show.html.slim
+++ b/app/views/adoption_requests/show.html.slim
@@ -3,10 +3,7 @@ div class="container-fluid"
     div class="col-xs-8 col-md-9" 
       h2 class="header-inline" 
         | Adoption Request Details
-      medium
-        | ( 
-        = link_to "Back", :back  
-        |  )
+      = render partial: 'shared/back_to_listing'
     div class="col-xs-4 col-md-3"
       div class="text-right"
         medium
