--- a/app/views/plantings/new.html.slim
+++ b/app/views/plantings/new.html.slim
@@ -3,7 +3,6 @@ div class="container-fluid"
     div class="col-xs-12"
       h2 class="header-inline"
         | Add a Planting
+      = render partial: 'shared/back_to_listing'
   br
   == render 'form'
-  br
-  = link_to 'Back', :back
