--- a/app/views/trees/index.html.slim
+++ b/app/views/trees/index.html.slim
@@ -23,8 +23,6 @@ div class="container-fluid"
               th Scientific name
               th Family name
               th Actions
-
-
           tbody
             - @trees.each do |tree|
               tr
@@ -32,8 +30,4 @@ div class="container-fluid"
                 td = tree.scientific_name
                 td = tree.family_name
                 td 
-                  = link_to 'Show', tree
-                  | &nbsp;|&nbsp;
-                  = link_to 'Edit', edit_tree_path(tree)
-                  | &nbsp;|&nbsp;
-                  = link_to 'Delete', tree, data: {:confirm => 'Are you sure?'}, :method => :delete
+                  = link_to 'Details', tree
