--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,8 +1,17 @@
 div class="container-fluid"
   div class="row"
-    div class="col-xs-8 col-md-10" 
+    div class="col-xs-8 col-md-9" 
       h2 class="header-inline" 
         | User Details
+      = render partial: 'shared/back_to_listing'
+    div class="col-xs-4 col-md-3"
+      div class="text-right"
+        medium
+          | ( 
+          = link_to 'Edit', edit_user_path(@user)
+          | &nbsp;|&nbsp;
+          = link_to 'Back', users_path
+          |  )
   br
   div class="row edit-row"
     div class="col-xs-4 col-md-2 text-right" 
@@ -48,9 +57,4 @@ div class="container-fluid"
     div class="col-xs-4 col-md-2 text-right" 
       strong Last Login IP
     div class="col-xs-8 col-md-4" 
-      = @user.last_login_ip  
-  div class="row edit-row"
-    div class="col-xs-4 col-md-2 text-right"      
-      = link_to 'Edit', edit_user_path(@user)
-      | &nbsp;|&nbsp;
-      = link_to 'Back', users_path
+      = @user.last_login_ip
