Sort tree selection options alphabetically by common name.

--- a/app/views/plantings/_form.html.slim
+++ b/app/views/plantings/_form.html.slim
@@ -10,7 +10,7 @@ div class="row"
       = f.collection_select :adoption_request_id, AdoptionRequest.all, :id, :text_for_html_select_option, prompt: true
       = f.date_field :planted_on
       = f.text_field :event
-      = f.collection_select :tree_id, Tree.all, :id, :text_for_html_select_option, prompt: true
+      = f.collection_select :tree_id, Tree.all.order( "common_name" ), :id, :text_for_html_select_option, prompt: true
       = f.text_field :placement
       = f.text_field :plant_space_width
       = f.check_box :stakes_removed
