--- a/app/views/reports/plantings_results.html.slim
+++ b/app/views/reports/plantings_results.html.slim
@@ -17,6 +17,7 @@ div class="container-fluid"
           thead
             tr
               th Planted On
+              th Zone
               th House Number
               th Street Name
               th Placement
@@ -31,6 +32,7 @@ div class="container-fluid"
             - @results.each do |planting|
               tr
                 td = planting.planted_on
+                td = planting.parent_adoption_request.zone
                 td = planting.parent_adoption_request.house_number
                 td = planting.parent_adoption_request.street_name
                 td = planting.placement
