--- a/app/views/plantings/show.html.slim
+++ b/app/views/plantings/show.html.slim
@@ -15,6 +15,8 @@ div class="container-fluid"
           = link_to "Edit", edit_planting_path(@planting)
           | &nbsp;|&nbsp;
           = link_to 'Delete', @planting, data: {:confirm => 'Are you sure?'}, :method => :delete
+          | &nbsp;|&nbsp;
+          = link_to 'Go To Adoption Request', adoption_request_path( :id => @planting.parent_adoption_request.id )
           |  )
   hr class="section-separator"
   div class="row edit-row"
