--- a/app/views/map/index.html.slim
+++ b/app/views/map/index.html.slim
@@ -9,4 +9,4 @@ javascript:
     }
   ];
 
-= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyC8TVDb8w84G3w1Q9xNHuMKhPc8ogJdLd8&callback=initMap"
+= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{ ENV['google_maps_api_key'] }&callback=initMap"
