--- a/app/views/adoption_requests/_form.html.slim
+++ b/app/views/adoption_requests/_form.html.slim
@@ -10,8 +10,8 @@ div class="row"
       = f.date_field :received_on
       = f.text_field :house_number
       = f.text_field :street_name
-      = f.text_field :city
-      = f.text_field :state
+      = f.text_field :city, :value => AdoptionRequest::DEFAULT_CITY
+      = f.text_field :state, :value => AdoptionRequest::DEFAULT_STATE
       = f.text_field :zip_code
       = f.text_field :zone
       = f.text_field :owner_first_name
