--- a/app/views/reports/plantings_results.html.slim
+++ b/app/views/reports/plantings_results.html.slim
@@ -10,6 +10,9 @@ div class="container-fluid"
     div class="col-xs-12 text-right"
       = link_to reports_plantings_results_path( format: :csv, params: request.query_parameters ) do
           button class="btn btn-default" Export to CSV  
+      | &nbsp;
+      = link_to "#", :id => "map-results-action", :target => "_blank" do
+          button class="btn btn-default" Map Results
   div class="row"
     div class="col-xs-12"
       div class="table-responsive"
@@ -27,10 +30,10 @@ div class="container-fluid"
               th class="note-column"
                 | Last Note
               th Actions
-
           tbody
             - @results.each do |planting|
               tr
+                input type="hidden" name="map-coordinates" value="#{ planting.id  }|#{ planting.parent_adoption_request.latitude }|#{ planting.parent_adoption_request.longitude }"
                 td = planting.planted_on
                 td = planting.parent_adoption_request.zone
                 td = planting.parent_adoption_request.house_number
