Clean up css a bit on map display page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@ $state-danger-text: $danger-text-color;
 @import "user_session.css.scss";
 @import "user.css.scss";
 @import "reports.css.scss";
+@import "map.css.scss";
 
 /*** manual bootstrap overrides ***/
 
