--- a/app/views/map/index.html.slim
+++ b/app/views/map/index.html.slim
@@ -1,6 +1,6 @@
 div class="row"
   div class="col-xs-12"
-    div id="map" style="height: 500px; width: 760px" class="centered-col map-canvas"
+    div id="map" class="centered-col map-canvas"
 
 javascript:
   var markers = #{ @markers.to_json.html_safe };
